# foliotrack

./: .gitignore  Contract_etf_comparator.py  README.md  __init__.py  app.py  gradio_app.py  main.py  pyproject.toml  requirements.txt  setup.py  test_portfolio.json
.github/workflows/: ci.yml  python-package.yml  python-publish.yml
DCA/: ETF.py  Portfolio.py  __init_.py
ETFOptim/: ETF.py  Equilibrate.py  Portfolio.py
Inputs/: investment.csv
PBalance/: Currency.py  Equilibrate.py  Portfolio.py  Security.py  __init_.py
Portfolios/: investment.csv  investment.json  investment_example.json
Purchases/: new_purchases.csv
Tools/: Contract_security_comparator.py
examples/: portfolio_from_scratch.ipynb
foliotrack/: Backtest.py  Equilibrate.py  Portfolio.py  Security.py  __init__.py
foliotrack/dashboard/: __init__.py  app.py
foliotrack/dashboard/Portfolios/: investment_example.json
foliotrack/dashboard/pages/: backtest.py  compare_securities.py  display_portfolio.py  equilibrium_buy.py  exchange_rates.py  load_portfolio.py
foliotrack/dashboard/utils/: config.py  contract_form.py  file_helpers.py  formatting.py  plots.py  portfolio_actions.py  sidebar.py  simulation.py
foliotrack/domain/: Portfolio.py  Security.py
foliotrack/services/: BacktestService.py  MarketService.py  OptimizationService.py
foliotrack/storage/: PortfolioRepository.py
tests/FolioTrack/: test_currency.py  test_equilibrate.py  test_portfolio.py  test_security.py
tests/PBalance/: test_currency.py  test_equilibrate.py  test_portfolio.py  test_security.py
tests/dashboard/components/: test_file_helpers.py  test_formatting.py  test_simulation.py
tests/dashboard/ui/: test_all_pages.py  test_backtest.py  test_equilibrium_buy.py  test_exchange_rates.py  test_load_portfolio.py  test_security_comparator.py
tests/foliotrack/: test_backtest.py  test_equilibrate.py  test_market_service.py  test_portfolio.py  test_security.py
