[project]
name = "FolioTrack"
version = "0.0.1"
description = "Tool to keep balance a portfolio of securities while investing."
readme = "README.md"
keywords = [
    "portfolio",
    "management",
    "portfolio management",
    "track",
    "investment",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyscipopt",
    "cvxpy",
    "gradio",
    "pandas",
    "matplotlib",
    "pyQt6",
    "yfinance",
    "ecbdata",
    "pytest",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["FolioTrack"]

[tool.pytest.ini_options]
pythonpath = "."
