[project]
name = "foliotrack"
version = "0.0.1"
description = "Tool to keep balance a portfolio of securities while investing."
readme = "README.md"
keywords = [
    "portfolio",
    "management",
    "portfolio management",
    "track",
    "investment",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyscipopt",
    "cvxpy",
    "gradio",
    "pandas",
    "matplotlib",
    "PyQt6",
    "yfinance",
    "ecbdata",
]

[project.urls]
"Homepage" = "https://github.com/PhDFlo/foliotrack"
"Bug Tracker" = "https://github.com/PhDFlo/foliotrack/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
