[project]
name = "foliotrack"
version = "0.0.10"
description = "Tool to keep balance a portfolio of securities while investing."
readme = "README.md"
keywords = [
    "portfolio",
    "management",
    "portfolio management",
    "track",
    "investment",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyscipopt",
    "cvxpy",
    "pandas",
    "yfinance",
    "ecbdata",
    "pytest",
    "bt",
    "ipykernel>=7.2.0",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: System :: Benchmark",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/PhDFlo/foliotrack"
"Bug Tracker" = "https://github.com/PhDFlo/foliotrack/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"foliotrack" = ["utils/data/currencies.json"]

[tool.pytest.ini_options]
pythonpath = "."
